compiler/tests/safety/fail/common/not_in_bounds.jazz
export fn f (reg ptr u32[2] t) -> reg ptr u32[2] {
  t[-1] = 2;
  t[2] = 2;
  return t;
}
